Consolidate and minimize use of Google-authored Java libraries (#321)
Because they don't play well with modules. See this github issue that's been open on Guava since 2017: https://github.com/google/guava/issues/2970

https://www.pivotaltracker.com/story/show/185744310