@@ -1,8 +1,6 @@
 // Copyright (c) XJ Music Inc. (https://xj.io) All Rights Reserved.
 package io.xj.nexus.craft.detail;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Streams;
 import io.xj.hub.HubTopology;
 import io.xj.hub.client.HubClient;
 import io.xj.hub.client.HubContent;
@@ -43,7 +41,9 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
 import java.util.Collection;
+import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static io.xj.nexus.NexusIntegrationTestingFixtures.buildChain;
 import static io.xj.nexus.NexusIntegrationTestingFixtures.buildSegment;
@@ -88,10 +88,11 @@ public class CraftDetailInitialTest {
 
     // Mock request via HubClient returns fake generated library of hub content
     NexusIntegrationTestingFixtures fake = new NexusIntegrationTestingFixtures();
-    sourceMaterial = new HubContent(Streams.concat(
-      fake.setupFixtureB1().stream(),
-      fake.setupFixtureB2().stream(),
-      fake.setupFixtureB3().stream(),
+    sourceMaterial = new HubContent(Stream.concat(
+      Stream.concat(
+        Stream.concat(fake.setupFixtureB1().stream(),
+          fake.setupFixtureB2().stream()),
+        fake.setupFixtureB3().stream()),
       fake.setupFixtureB4_DetailBass().stream()
     ).collect(Collectors.toList()));
 
@@ -128,7 +129,7 @@ public class CraftDetailInitialTest {
       Segments.DELTA_UNLIMITED,
       fake.program5,
       fake.program5_sequence0_binding0));
-    for (String memeName : ImmutableList.of("Special", "Wild", "Pessimism", "Outlook"))
+    for (String memeName : List.of("Special", "Wild", "Pessimism", "Outlook"))
       store.put(buildSegmentMeme(segment6, memeName));
     SegmentChord chord0 = store.put(buildSegmentChord(segment6, 0.0, "C minor"));
     store.put(buildSegmentChordVoicing(chord0, InstrumentType.Bass, "C2, Eb2, G2"));
