@@ -1,9 +1,9 @@
 // Copyright (c) XJ Music Inc. (https://xj.io) All Rights Reserved.
 package io.xj.nexus.fabricator;
 
-import com.google.common.collect.ImmutableList;
 import org.junit.Test;
 
+import java.util.List;
 import java.util.Set;
 
 import static org.junit.Assert.assertArrayEquals;
@@ -13,7 +13,7 @@ public class NameIsometryTest {
 
   @Test
   public void of_List() {
-    NameIsometry result = NameIsometry.ofEvents(ImmutableList.of(
+    NameIsometry result = NameIsometry.ofEvents(List.of(
       "Kick",
       "Snare"
     ));
@@ -23,7 +23,7 @@ public class NameIsometryTest {
 
   @Test
   public void add() {
-    NameIsometry result = NameIsometry.ofEvents(ImmutableList.of(
+    NameIsometry result = NameIsometry.ofEvents(List.of(
       "Kick"
     ));
     result.add("Snare");
@@ -33,7 +33,7 @@ public class NameIsometryTest {
 
   @Test
   public void getSourceStems() {
-    Set<String> result = NameIsometry.ofEvents(ImmutableList.of(
+    Set<String> result = NameIsometry.ofEvents(List.of(
       "TomHigh",
       "TomLow",
       "Tom"
